update with more lessons

--- a/dataquest/1-1-python-fundamentals/5-dictionaries/dictionaries.ipynb
+++ b/dataquest/1-1-python-fundamentals/5-dictionaries/dictionaries.ipynb
@@ -348,6 +348,266 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Instructions\n",
+    "\n",
+    "1. Use the new technique we learned to map content ratings to their corresponding numbers inside a dictionary.\n",
+    "- Create an empty dictionary named `content_ratings`.\n",
+    "- Add the `index:value` pairs one by one using the `dictionary_name[index] = value` technique. This should be the final form of the dictionary: `{'4+': 4433, '9+': 987, '12+': 1155, '17+': 622}`.\n",
+    "2. Retrieve the value at index `12+` from the `content_ratings` dictionary. Assign it to a variable named `over_12_n_apps`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1155\n"
+     ]
+    }
+   ],
+   "source": [
+    "content_ratings = {}\n",
+    "content_ratings['4+'] = 4433\n",
+    "content_ratings['9+'] = 987\n",
+    "content_ratings['12+'] = 1155\n",
+    "content_ratings['17+'] = 622\n",
+    "\n",
+    "over_12_n_apps = content_ratings['12+']\n",
+    "print(over_12_n_apps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Key-Value Pairs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The index of a dictionary value is called a **key**. In `'4+': 4433`, the dictionary key is `'4+'`, and the dictionary value is `4433`. As a whole, `'4+': 4433` is a **key-value pair**.\n",
+    "\n",
+    "Dictionary values can be of any data type: strings, intefers, floats, Booleans, lists, and even dictionaries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key_1': 'value_1', 'key_2': 1, 'key_3': 1.832, 'key_4': False, 'key_5': [1, 2, 3], 'key_6': {'inner_key': 10}}\n",
+      "value_1\n",
+      "{'inner_key': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d_1 = {\n",
+    "    'key_1': 'value_1',\n",
+    "    'key_2': 1,\n",
+    "    'key_3': 1.832,\n",
+    "    'key_4': False,\n",
+    "    'key_5': [1, 2, 3],\n",
+    "    'key_6': {'inner_key': 10}\n",
+    "}\n",
+    "\n",
+    "print(d_1)\n",
+    "print(d_1['key_1'])\n",
+    "print(d_1['key_6'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dictionary keys can be of almost any data type we've learned so far, except lists and dictionaries. If we use lists or dictionaries as dictiomary keys, the computer raises an error.\n",
+    "\n",
+    "When we populate a dictionary, we also need to make sure each key in that dictionary is unique. If we use an identical key for two or more different values, Python keeps only the last key-value pair in the dictionary and removes the others -- this means that we'll lose data.\n",
+    "\n",
+    "An odd 'gotcha' is when we mix integers with Booleans as dictionary keys. The `hash()` command converts the Boolean `True` to `1` and the Boolean `False` to `0`. This means the Booleans `True` and `False` will conflict with the integers `0` and `1`. The dictionary keys won't be unique anymore, and Python will only keep the last key-value pair in cases like that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Instructions\n",
+    "\n",
+    "1. Create the following dictionary and assign it to a variable named `d_1`:\n",
+    "\n",
+    "```python\n",
+    "{\n",
+    "    'key_1': 'value_1',\n",
+    "    'key_2': 1,\n",
+    "    'key_3': 1.832,\n",
+    "    'key_4': False,\n",
+    "    'key_5': [1, 2, 3],\n",
+    "    'key_6': {'inner_key': 10}\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "2. Examine the code below and determine whether it'll raise an error or not. If you think it'll raise an error, then assign the boolean `True` to a variable named `error`, otherwise assign `False`.\n",
+    "\n",
+    "```python\n",
+    "{4: 'four',\n",
+    "1.5: 'one point five',\n",
+    "'string_key': 'string_value',\n",
+    "True: 'True',\n",
+    "[1,2,3]: 'a list',\n",
+    "{10: 'ten'}: 'a dictionary'}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_1 = {'key_1': 'first_value', \n",
+    " 'key_2': 2,\n",
+    " 'key_3': 3.14,\n",
+    " 'key_4': True,\n",
+    " 'key_5': [4,2,1],\n",
+    " 'key_6': {'inner_key' : 6}\n",
+    " }\n",
+    "\n",
+    "error = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Checking for Membership"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Previously, we worked with a small table showing the four unique content ratings in our data set, along with the number of apps corresponding to each rating:\n",
+    "\n",
+    "| **Content rating** | **Number of apps** |\n",
+    "| :--- | :--- |\n",
+    "| 4+ | 4,433 |\n",
+    "| 9+ | 987 |\n",
+    "| 12+ | 1,155 |\n",
+    "| 17+ | 622 |\n",
+    "\n",
+    "You might have wondered how we managed to count the number of apps for each unique content rating. How did we find out there are 4,433 apps with a `4+` content rating, or 622 apps with a `17+` rating? Part of the answer is that we used a technique that makes use of the special properties of dictionaries.\n",
+    "\n",
+    "Once we've created a dictionary, we can check whether a certain value exists in the dictionary as a key. We can check, for instance, whether the value `'12+'` exists as a key in the dictionary `{'4+': 4433, '9+': 987, '12+': 1155, '17+': 622}`. To do that, we use the `in` **operator**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "content_ratings = {'4+': 4433, '9+': 987, '12+': 1155, '17+': 622}\n",
+    "\n",
+    "'12+' in content_ratings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `'12+' in content_ratings` expression returned the Boolean `True`. This is because the string `'12+'` exists in the dictionary `content_ratings` as a key.\n",
+    "\n",
+    "If we use `in` with a certain value that doesn't exist among a dictionary's keys, `False` is returned. For instance, checking whether the string `'10+'` exists in the dictionary `content_ratings` returns `False` because there's no dictionary key `'10+'` in `content_ratings`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "content_ratings = {'4+': 4433, '9+': 987, '12+': 1155, '17+': 622}\n",
+    "\n",
+    "print('10+' in content_ratings)\n",
+    "print('12+' in content_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking whether `4433` or `987` exists in `content_ratings` also returns `False` because the search is done only over the dictionary's keys (`4433` and `987` exist as dictionary _values_ in `content_ratings`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "content_ratings = {'4+': 4433, '9+': 987, '12+': 1155, '17+': 622}\n",
+    "\n",
+    "print(4433 in content_ratings)\n",
+    "print(987 in content_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An expression of the form `a_value in a_dictionary` always returns a Boolean value:\n",
+    "\n",
+    "- `True` is returned if `a_value` exists in `a_dictionary` as a key.\n",
+    "- `False` is returned if `a_value` doesn't exist in `a_dictionary` as a dictionary key."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
