counting and finding unique values lessons

--- a/dataquest/1-1-python-fundamentals/5-dictionaries/dictionaries.ipynb
+++ b/dataquest/1-1-python-fundamentals/5-dictionaries/dictionaries.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -605,6 +605,278 @@
     "\n",
     "- `True` is returned if `a_value` exists in `a_dictionary` as a key.\n",
     "- `False` is returned if `a_value` doesn't exist in `a_dictionary` as a dictionary key."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Instructions\n",
+    "\n",
+    "1. Using the `in` operator, check whether the following values exist as dictionary keys in the `content_ratings` dictionary:\n",
+    "- The string `'9+'`. Assign the output of the expression to a variable named `is_in_dictionary_1`.\n",
+    "- The integer `987`. Assign the output of the expression to a variable named `is_in_dictionary_2`.\n",
+    "2. Combine the output of an expression containing `in` with an `if` statement. If the string `'17+'` exists as a dictionary key in `content_ratings`, then:\n",
+    "- Assign the string `\"It exists\"` to a variable named `result`.\n",
+    "- Print the `result` variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "content_ratings = {'4+': 4433, '9+': 987, '12+': 1155, '17+': 622}\n",
+    "\n",
+    "is_in_dictionary_1 = '9+' in content_ratings\n",
+    "is_in_dictionary_2 = 987 in content_ratings\n",
+    "\n",
+    "if '17+' in content_ratings:\n",
+    "    result = \"It exists\"\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Counting with Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we've created and populated a dictionary, we can updated (change) the dictionary values. To update a dictionary value, we need to reference it by its corresponding dictionary key and then perform the updating operation we want. In the code example below, we:\n",
+    "\n",
+    "- Change the value corresponding to the dictionary key `'4+'` from `4433` to `0`.\n",
+    "- Add `13` to the value corresponding to the dctionary key `'9+'`.\n",
+    "- Subtract `1155` from the value corresponding to the dictionary key `'12+'`.\n",
+    "- Change the value corresponding to the dictionary key `'17+'` from `622` (integer) to `'622'` (string)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'4+': 0, '9+': 1000, '12+': 0, '17+': '622'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "content_ratings = {'4+': 4433, '9+': 987, '12+': 1155, '17+': 622}\n",
+    "\n",
+    "content_ratings['4+'] = 0\n",
+    "content_ratings['9+'] += 13\n",
+    "content_ratings['12+'] -= 1155\n",
+    "content_ratings['17+'] = '622'\n",
+    "print(content_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can combine updating dictionary values with what we already know to count how many times each unique content rating occurs in our data set. Let's start by considering the list `['4+', '4+', '4+', '9+', '9+', '12+', '17+']`, which stores a few content ratings. To use code for counting how many times each rating occurs in this short list, we could:\n",
+    "\n",
+    "- Create a dictionary where the keys are the unique content ratings and the values are all 0: `{'4+': 0, '9+': 0, '12+': 0, '17+': 0}`.\n",
+    "- Loop through the list `['4+', '4+', '4+', '9+', '9+', '12+', '17+']`, and for each iteration:\n",
+    "    - Check whether the iteration variable exists as a key in the previously created dictionary.\n",
+    "    - If it exists, then increment the dictionary value at taht key by `1`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'4+': 3, '9+': 2, '12+': 1, '17+': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "content_ratings = {'4+': 0, '9+': 0, '12+': 0, '17+': 0}\n",
+    "ratings = ['4+', '4+', '4+', '9+', '9+', '12+', '17+']\n",
+    "\n",
+    "for c_rating in ratings:\n",
+    "    if c_rating in content_ratings:\n",
+    "        content_ratings[c_rating] += 1\n",
+    "        \n",
+    "print(content_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's read in our `AppleStore.csv` data set, and use the technique above to count the number of times each unique content rating occurs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Instructions\n",
+    "\n",
+    "Count the number of times each unique content rating occurs in the data set.\n",
+    "\n",
+    "1. Create a dictionary named `content_ratings` where the keys are the unique content ratings and the values are all 0 (the values of 0 are temporary at this point, and they'll be updated).\n",
+    "2. Loop through the `apps_data` list of lists. Make sure you don't include the header row. For each iteration of the loop:\n",
+    "- Assign the content rating value to a variable named `c_rating`. The content rating is at index number `10` in each row.\n",
+    "- Check whether `c_rating` exists as a key in `content_ratings`. If it exists, then increment the dictionary value at that key by `1` (the key is equivalent to the value stored in `c_rating`).\n",
+    "3. Outside the loop, print `content_ratings` to check whether the counting worked as expected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'4+': 4433, '9+': 987, '12+': 1155, '17+': 622}\n"
+     ]
+    }
+   ],
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)\n",
+    "opened_file.close()\n",
+    "\n",
+    "content_ratings = {'4+': 0, '9+': 0, '12+': 0, '17+': 0}\n",
+    "\n",
+    "for row in apps_data[1:]:\n",
+    "    c_rating = row[10]\n",
+    "    if c_rating in content_ratings:\n",
+    "        content_ratings[c_rating] += 1\n",
+    "        \n",
+    "print(content_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Finding the Unique Values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Previously, we created the dictionary `{'4+': 0, '9+': 0, '12+': 0, '17+': 0}` _before_ we looped over the data set to count the occurrence of each content rating. Unfortunately, this approach requires us to know beforehand the unique values we want to count.\n",
+    "\n",
+    "Let's say we didn't know what the unique content ratings are. This means that we don't have enough information to create the dictionary `{'4+': 0, '9+': 0, '12+': 0, '17+': 0}`. We need to devise a way to extract this information.\n",
+    "\n",
+    "Our data set has 7,197 rows, and it's impractical to go over each row and figure out what the unique content ratings are. As a workaround, we can modify the logic of the code we used in the previous screen to find the unique values automatically.\n",
+    "\n",
+    "Let's consider again the count we did for the list `['4+', '4+', '4+', '9+', '9+', '12+', '17+']`. To perform the count while finding the unique values automatically, we will:\n",
+    "- Create an empty dictionary named `content_ratings`.\n",
+    "- Loop through the list `['4+', '4+', '4+', '9+', '9+', '12+', '17+']`, and check for every iteration whether the iteration variable (`c_rating`) exists as a key in `content_ratings`.\n",
+    "    - If it exists, then increment the dictionary value at that key by `1`.\n",
+    "    - Else (if it doesn't exist), create a new key-value pair in the `content_ratings` dictionary, where the dictionary key is the iteration variable (`c_rating`) and the dictionary value is `1`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'4+': 3, '9+': 2, '12+': 1, '17+': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "content_ratings = {}\n",
+    "ratings = ['4+', '4+', '4+', '9+', '9+', '12+', '17+']\n",
+    "\n",
+    "for c_rating in ratings:\n",
+    "    if c_rating in content_ratings:\n",
+    "        content_ratings[c_rating] += 1\n",
+    "    else:\n",
+    "        content_ratings[c_rating] = 1\n",
+    "        \n",
+    "print(content_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Instructions\n",
+    "\n",
+    "- Count the number of times each unique content rating occurs in the data set while finding the unique values automatically.\n",
+    "\n",
+    "1. Create an empty dictionary named `content_ratings`.\n",
+    "2. Loop through the `apps_data` list of lists (make sure you don't include the header row). For each iteration of the loop:\n",
+    "- Assign the content rating value to a variable named `c_rating`. The content rating is at index number `10`.\n",
+    "- Check whether `c_rating` exists as a key in `content_ratings`.\n",
+    "    - If it exists, then increment the dictionary value at that key by `1` (they key is equivalent to the value stored in `c_rating`).\n",
+    "    - Else, create a new key-value pair in the dictionary, where the dictionary key is `c_rating` and the dictionary value is `1`.\n",
+    "3. Outside the loop, print `content_ratings` to check whether the counting worked as expected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'4+': 4433, '12+': 1155, '9+': 987, '17+': 622}\n"
+     ]
+    }
+   ],
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)\n",
+    "opened_file.close()\n",
+    "\n",
+    "content_ratings = {}\n",
+    "\n",
+    "for row in apps_data[1:]:\n",
+    "    c_rating = row[10]\n",
+    "    if c_rating in content_ratings:\n",
+    "        content_ratings[c_rating] += 1\n",
+    "    else:\n",
+    "        content_ratings[c_rating] = 1\n",
+    "        \n",
+    "print(content_ratings)"
    ]
   },
   {
